--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;url=/" />
-    <title>Redirigiendo...</title>
+    <meta http-equiv="refresh" content="0;url=/alborada-demo-web/" />
+    <title>Redirecting...</title>
   </head>
   <body>
-    Si no eres redirigido automáticamente, haz <a href="/">clic aquí</a>.
+    <p>If you are not redirected, <a href="/alborada-demo-web/">click here</a>.</p>
   </body>
 </html>
